--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -226,7 +226,7 @@ section.choose-section {
 .quote-section {
     padding: 70px 0;
     height: 300px;
-    background-image: url(/assets/images/third-bg.jpg);
+    background-image: url(./assets/images/third-bg.jpg);
     background-color: $secondaryBgColor;
     background-size: cover;
     background-position: center;
@@ -268,7 +268,7 @@ section.product-section {
         z-index: 1;
 
         .produt-bg {
-            background-image: url(/assets/images/fourth-bg.jpg);
+            background-image: url(./assets/images/fourth-bg.jpg);
             background-size: cover;
             width: 27%;
             position: absolute;
