--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -398,25 +398,49 @@ section.product-section {
     .video-section-inner {
         .video {
             display: flex;
-            >div{
+
+            >div {
                 flex-grow: 1;
             }
 
             .left-video {
                 width: 75%;
+
                 .video-container {
                     position: relative;
                     width: 100%;
                     padding-bottom: 56.25%;
                     overflow: hidden;
-                }
 
-                .video-container iframe {
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    width: 100%;
-                    height: 100%;
+
+                    .video-overlay {
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        width: 100%;
+                        height: 100%;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        cursor: pointer;
+                        background-image: url("./assets/images/video-overlay.jpg");
+                        background-position: center;
+                        background-size: cover;
+                        z-index: 99999999;
+                        i {
+                            font-size: 90px;
+                            color: $mainTextColor;
+                        }
+                    }
+
+                    iframe {
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        width: 100%;
+                        height: 100%;
+                    }
+
                 }
 
             }
@@ -425,7 +449,7 @@ section.product-section {
                 width: 25%;
                 background-image: url("/assets/images/video-bg.jpg");
                 background-size: cover;
-                background-position: center;                
+                background-position: center;
             }
         }
     }
