--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -423,7 +423,7 @@ section.product-section {
                         justify-content: center;
                         align-items: center;
                         cursor: pointer;
-                        background-image: url("./assets/images/video-overlay.jpg");
+                        background-image: url("/assets/images/video-overlay.jpg");
                         background-position: center;
                         background-size: cover;
                         z-index: 99999999;
