--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -226,7 +226,7 @@ section.choose-section {
 .quote-section {
     padding: 70px 0;
     height: 300px;
-    background-image: url("/assets/images/third-bg.jpg");
+    background-image: url("../images/third-bg.jpg");
     background-color: $secondaryBgColor;
     background-size: cover;
     background-position: center;
