--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,6 +9,11 @@ $secondaryTextColor: #1e2875;
 $btnBgColor : #e185a9;
 
 
+html {
+    scroll-behavior: smooth;
+  }
+  
+
 
 * {
     margin: 0;
@@ -536,34 +541,75 @@ section.product-section {
     height: 200px;
     background-color: $secondaryBgColor;
     color: $mainTextColor;
+
     .subscribe-section-inner {
         @include div-flex($justify: center);
+
         .subscribe {
             text-align: center;
             max-width: 920px;
             margin: 0 auto;
+
             .heading {
                 p {
                     margin: 40px 0;
                 }
             }
 
-            .subscribe-form input[type="email"]  {
+            .subscribe-form input[type="email"] {
                 background-color: transparent;
                 border: 1px solid grey;
                 padding: 12px 14px;
                 min-width: 280px;
                 border-right: 0px;
             }
+
             input[type="button"] {
                 padding: 12px 24px;
                 margin-left: -5px;
                 color: $secondaryTextColor;
             }
+
             .subscribe-form input:focus-visible {
                 outline: 0 !important;
             }
         }
 
+    }
+}
+
+//FOOTER COe start
+
+#Footer {
+    padding: 30px 0;
+
+    .footer-inner {
+        @include div-flex();
+
+        .footer-left {
+            img {
+                max-width: 80px;
+            }
+        }
+
+        .social {
+            li {
+                display: inline-block;
+
+                a {
+                    display: block;
+                    margin: 0 2.5px;
+                    i {
+                        font-size: 16px;
+                    }
+                }
+            }
+        }
+
+    }
+
+    .footer-copyright {
+        text-align: center;
+        font-size: 12px;
     }
 }
