--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,7 +11,7 @@ $btnBgColor : #e185a9;
 
 html {
     scroll-behavior: smooth;
-  }
+}
   
 
 
@@ -82,7 +82,7 @@ span.lineBr {
     padding: 12px 14px;
     border: 1px solid #c1b59d !important;
     font-size: 15px;
-    background-color: $mainBgColor;
+    background-color: #ece4cd;
 }
 
 .form-input:focus,
