--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,7 +12,7 @@ $btnBgColor : #e185a9;
 html {
     scroll-behavior: smooth;
 }
-  
+
 .Site-Wrap {
     overflow: hidden;
 }
@@ -214,6 +214,7 @@ body {
             flex-direction: column;
             justify-content: center;
             align-items: self-start;
+            padding: 30px 0;
 
             h1 {
                 color: $mainTextColor;
@@ -351,7 +352,7 @@ section.product-section {
 
                 .single-product-item {
                     display: inline-flex;
-                    max-width: 500px;
+                    // max-width: 500px;
 
                     >div {
                         width: 50%;
@@ -510,7 +511,7 @@ section.product-section {
 
                 .input-row {
                     @include div-flex();
-                    gap: 50px;
+                    gap: 30px;
                     margin: 15px 0;
 
                     >div {
@@ -518,12 +519,14 @@ section.product-section {
 
                         input {
                             width: 100%;
+                            box-sizing: border-box;
                         }
                     }
                 }
 
                 textarea {
                     width: 100%;
+                    box-sizing: border-box;
                 }
 
                 input.btn {
@@ -580,7 +583,7 @@ section.product-section {
     }
 }
 
-//FOOTER COe start
+//FOOTER CODE START=======================
 
 #Footer {
     padding: 30px 0;
@@ -601,6 +604,7 @@ section.product-section {
                 a {
                     display: block;
                     margin: 0 2.5px;
+
                     i {
                         font-size: 16px;
                     }
@@ -614,4 +618,221 @@ section.product-section {
         text-align: center;
         font-size: 12px;
     }
+}
+
+
+// RESPONSIVE CSS =====================================================
+
+
+//Variables for different breakpoints for 
+
+$extra-mobile-screen: 480px;
+$mobile-screen: 768px;
+$tablet-screen: 1024px;
+$laptop-screen: 1430px;
+
+
+@media screen and (max-width: $laptop-screen) {
+    .mainContainer {
+        max-width: 1024px;
+    }
+
+    .nav ul {
+        width: auto;
+    }
+
+    h1 {
+        font-size: 50px;
+    }
+
+    h2 {
+        font-size: 40px;
+    }
+
+    .banner-section .banner-inner .banner-left {
+        width: 40%;
+    }
+}
+
+@media screen and (max-width: $tablet-screen) {
+    .banner-left {
+        margin-left: -20px;
+    }
+
+    section.product-section .quote-section-inner .produt-bg {
+        left: 0;
+    }
+
+    .store-section .store {
+        gap: 30px;
+    }
+
+    .store-section .store .bottom-div {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+    .video-section {
+        .mainContainer.video-section-inner {
+            padding: 0 !important;
+            .video-overlay {
+                i {
+                    font-size: 50px !important
+                }
+            }
+        }
+    }
+
+    .contact .left-bg {
+        margin-left: -20px;
+    }
+
+    .nav ul li a {
+        font-size: 18px;
+        margin: 0 2px;
+        padding: 8 10px;
+    }
+}
+
+
+@media screen and (max-width: $mobile-screen) {
+
+    nav.nav {
+        flex-direction: column;
+    }
+
+    h1 {
+        font-size: 40px;
+    }
+
+    h2 {
+        font-size: 30px;
+    }
+
+    .banner-section .banner-inner {
+        .banner-left {
+            display: none;
+        }
+
+        .banner-right {
+            text-align: center;
+            width: 90%;
+            align-items: center;
+            margin: 0 auto;
+        }
+    }
+
+
+    section.choose-section {
+        .choose-section-inner {
+            flex-direction: column-reverse;
+
+            .lineBr {
+                display: inline-block;
+                margin-left: 7px;
+            }
+
+            .left-text {
+                margin-top: 30px;
+            }
+
+            .right-img {
+                text-align: center;
+
+                img {
+                    max-width: 60%;
+                    margin: 0 auto;
+                }
+            }
+        }
+    }
+
+    section.product-section {
+        .quote-section-inner {
+            .produt-bg {
+                display: none;
+            }
+
+            .product {
+                padding-left: 0;
+
+                .carousel-wrap {
+                    .owl-carousel .owl-stage-outer {
+                        margin: 0 !important;
+                    }
+                }
+            }
+        }
+
+    }
+
+    .video-section {
+        .right-bg-part {
+            display: none;
+        }
+    }
+
+    .store-section {
+        padding: 50px 0;
+
+        .store {
+            grid-template-columns: repeat(1, 1fr);
+        }
+    }
+
+    .contact-section {
+        .left-bg {
+            display: none;
+        }
+
+        .form-wrapper {
+            padding-left: 20px !important;
+            padding-right: 20px !important;
+        }
+    }
+
+
+    .subscribe-section {
+        .subscribe-section-inner {
+            .subscribe .subscribe-form {
+                input[type=email] {
+                    min-width: 170px
+                }
+                input[type=button] {
+                    padding: 12px 16px;
+                }
+            }
+        }
+    }
+
+}
+
+
+@media screen and (max-width: $extra-mobile-screen) {
+    .subscribe-section .subscribe-section-inner .subscribe .subscribe-form input[type=email] {
+        min-width: 140px;
+    }
+    .contact-section {
+        .form-wrapper {
+            padding-left: 0px !important;
+            padding-right: 0px !important;
+        }
+        .contact-section-inner {
+            .contact {
+                .right-contact-form .input-row {
+                    display: block;
+                    .left-input {
+                        margin-bottom: 15px;
+                    }
+                }
+            }
+        }
+    }
+
+    #Footer .footer-inner {
+        flex-direction: column;
+    }
+    .footer-right {
+        margin: 15px 0;
+    }
+
 }
